--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                 <div>
                     <form>
                         <label for="nome">Título:</label> <input type="text" id="Titulo" name="nome" required> <br> <br>
-                        <label for="nome">Idioma original:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">País de origem:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">Ano de lançamento:</label> <input type="date" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">Diretor:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">Roteiro:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">Produtora:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">Elenco:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">Duração:</label> <input type="time" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">Gênero:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                        <label for="nome">Sinopse:</label> <br> <br> <textarea type="text" id="nome" name="nome" required> </textarea> <br> <br>
+                        <label for="nome">Idioma original:</label> <input type="text" id="idioma_original" name="nome" required> <br> <br>
+                        <label for="nome">País de origem:</label> <input type="text" id="país_origem" name="nome" required> <br> <br>
+                        <label for="nome">Ano de lançamento:</label> <input type="date" id="ano_lançamento" name="nome" required> <br> <br>
+                        <label for="nome">Diretor:</label> <input type="text" id="diretor" name="diretor" required> <br> <br>
+                        <label for="nome">Roteiro:</label> <input type="text" id="roteiro" name="nome" required> <br> <br>
+                        <label for="nome">Produtora:</label> <input type="text" id="produtora" name="nome" required> <br> <br>
+                        <label for="nome">Elenco:</label> <input type="text" id="elenco" name="nome" required> <br> <br>
+                        <label for="nome">Duração:</label> <input type="time" id="duração" name="nome" required> <br> <br>
+                        <label for="nome">Gênero:</label> <input type="text" id="genero" name="nome" required> <br> <br>
+                        <label for="nome">Sinopse:</label> <br> <br> <textarea type="text" id="sinopse" name="nome" required> </textarea> <br> <br>
                     </form>
                         </div>
                     </div>
@@ -59,18 +59,18 @@
                             <h1>SÉRIE</h1>
                             <div>
                                 <form>
-                                    <label for="nome">Título:</label> <input type="text" id="nome" name="nome" required> <br><br>
-                                    <label for="nome">Idioma original:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">País de origem:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Ano de lançamento:</label> <input type="date" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Diretor:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Roteiro:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Produtora:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Elenco:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Duração:</label> <input type="time" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Episódios:</label> <input type="number" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Gênero:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                    <label for="nome">Sinopse:</label> <input type="text" id="nome" name="nome" required> <br> <br>
+                                    <label for="nome">Título:</label> <input type="text" id="titulo" name="nome" required> <br><br>
+                                    <label for="nome">Idioma original:</label> <input type="text" id="idioma_original" name="nome" required> <br> <br>
+                                    <label for="nome">País de origem:</label> <input type="text" id="país_origem" name="nome" required> <br> <br>
+                                    <label for="nome">Ano de lançamento:</label> <input type="date" id="ano_lançamento" name="nome" required> <br> <br>
+                                    <label for="nome">Diretor:</label> <input type="text" id="diretor" name="nome" required> <br> <br>
+                                    <label for="nome">Roteiro:</label> <input type="text" id="roteiro" name="nome" required> <br> <br>
+                                    <label for="nome">Produtora:</label> <input type="text" id="produtora" name="nome" required> <br> <br>
+                                    <label for="nome">Elenco:</label> <input type="text" id="elenco" name="nome" required> <br> <br>
+                                    <label for="nome">Duração:</label> <input type="time" id="duração" name="nome" required> <br> <br>
+                                    <label for="nome">Episódios:</label> <input type="number" id="episodios" name="nome" required> <br> <br>
+                                    <label for="nome">Gênero:</label> <input type="text" id="genero" name="nome" required> <br> <br>
+                                  
                                 </form>
                                     <div>
                                     </div>
@@ -87,16 +87,16 @@
                                     <h1>DOCUMENTÁRIO</h1>
                                     <div>
                                         <form>
-                                            <label for="nome">Título:</label> <input type="text" id="nome" name="nome" required> <br><br>
-                                            <label for="nome">Idioma original:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                            <label for="nome">País de origem:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                            <label for="nome">Ano de lançamento:</label> <input type="date" id="nome" name="nome" required> <br> <br>
-                                            <label for="nome">Diretor:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                            <label for="nome">Roteiro:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                            <label for="nome">Produtora:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                            <label for="nome">Duração:</label> <input type="time" id="nome" name="nome" required> <br> <br>
-                                            <label for="nome">Gênero:</label> <input type="text" id="nome" name="nome" required> <br> <br>
-                                            <label for="nome">Sobre:</label> <input type="text" id="nome" name="nome" required> <br> <br>
+                                            <label for="nome">Título:</label> <input type="text" id="nome" name="titulo" required> <br><br>
+                                            <label for="nome">Idioma original:</label> <input type="text" id="idioma_original" name="nome" required> <br> <br>
+                                            <label for="nome">País de origem:</label> <input type="text" id="país_origem" name="nome" required> <br> <br>
+                                            <label for="nome">Ano de lançamento:</label> <input type="date" id="ano_lançamento" name="nome" required> <br> <br>
+                                            <label for="nome">Diretor:</label> <input type="text" id="nome" name="diretor" required> <br> <br>
+                                            <label for="nome">Roteiro:</label> <input type="text" id="nome" name="roteiro" required> <br> <br>
+                                            <label for="nome">Produtora:</label> <input type="text" id="nome" name="produtora" required> <br> <br>
+                                            <label for="nome">Duração:</label> <input type="time" id="nome" name="duração" required> <br> <br>
+                                            <label for="nome">Gênero:</label> <input type="text" id="nome" name="genero" required> <br> <br>
+                                         
                                         </form>
                                             <div>
                                             </div>
